--- a/src/components/Dashboard/Dashboard.css
+++ b/src/components/Dashboard/Dashboard.css
@@ -18,7 +18,7 @@
     height: 50px;
     min-height: 50px;
     background-color: black;
-    z-index: 5;
+    z-index: 4;
 }
 
 .dashboard-container{
